[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extra-http"
version = "1.0.9"
description = "A fast, async HTTP framework"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Extra Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["mypy-extensions"]
dynamic = ["urls"]

[project.scripts]
extra = "extra.__main__:main"

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.setuptools.package-dir]
"" = "src/py"

[tool.ruff]
line-length = 88
target-version = "py38"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E101", "E203", "E501", "W191"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "build"]
skips = ["B101"]
# EOF
